--- a/index.html
+++ b/index.html
@@ -1,47 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Basic Portfolio</title>
-    <link rel="stylesheet" href="assets/css/style.css"/>   
-</head>
-<body>
-    <div id="nav-bar">
-    <h1>Juan Carlos</h1> 
-    <ul>
-        <li> <a href="#">about</a></li>
-        <li>Portfolio</li>
-        <li>contact</li>
-    </ul>
-    </div>
-
-    <div id="container">
-<div class="row">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti fuga molestiae dolorum possimus quidem totam, soluta omnis suscipit voluptatibus nesciunt praesentium obcaecati laborum quia nisi velit voluptatum. Voluptatibus, nihil impedit.</p><div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </div>
-   
-</body>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <h1>Juan Carlos</h1>
+        <ul>
+          <li><a rel="stylesheet" href="index.html">About</a></li>
+          <li><a rel="stylesheet" href="portfolio.html">Portfolio</a></li>
+          <li><a rel="stylesheet" href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </header>
+    <br />
+    <main>
+      <img
+        src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/36736127_1932792590085631_4496699272783200256_n.jpg?_nc_cat=100&_nc_oc=AQnBYfVckw9tIphQgyew5dVgYRTJWVCDxcCFF6dOJK4Dzb2QNHumxEthgGBU_Com8q8&_nc_ht=scontent-dfw5-1.xx&oh=269428dbf2f2133ea2a61d1288a20e6a&oe=5E3B60EE"
+        alt="profile pic"
+        width="200px"
+        height="200px"
+      />
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
+        delectus minima incidunt voluptatum, ea esse perferendis sed nobis!
+        Repellat, iste. Impedit nobis, cupiditate necessitatibus rerum odio
+        doloremque eos dignissimos libero!
+      </p>
+    </main>
+  </body>
 </html>
