added footer and index content

--- a/index.html
+++ b/index.html
@@ -7,31 +7,28 @@
     <title>Basic Portfolio</title>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
+
+  <div class="container">
+    <h1>Juan Carlos</h1>
+    <ul>
+      <li><a rel="stylesheet" href="index.html">About</a></li>
+      <li><a rel="stylesheet" href="portfolio.html">Portfolio</a></li>
+      <li><a rel="stylesheet" href="contact.html">Contact</a></li>
+    </ul>
+  </div>
   <body>
-    <header>
-      <div class="container">
-        <h1>Juan Carlos</h1>
-        <ul>
-          <li><a rel="stylesheet" href="index.html">About</a></li>
-          <li><a rel="stylesheet" href="portfolio.html">Portfolio</a></li>
-          <li><a rel="stylesheet" href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-    </header>
     <br />
-    <main>
+    <main class="container2">
+      <H2>About Me</H2>
       <img
-        src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/36736127_1932792590085631_4496699272783200256_n.jpg?_nc_cat=100&_nc_oc=AQnBYfVckw9tIphQgyew5dVgYRTJWVCDxcCFF6dOJK4Dzb2QNHumxEthgGBU_Com8q8&_nc_ht=scontent-dfw5-1.xx&oh=269428dbf2f2133ea2a61d1288a20e6a&oe=5E3B60EE"
-        alt="profile pic"
+        src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/53679337_2288761991155354_4829474605892632576_o.jpg?_nc_cat=109&_nc_oc=AQm7TUQUgNtIsAQMZnt4JN_IulzN_BhENXzV5_RJEWmzTwSevYkSYYol_g7p5Yvo9LNM4XoA2_IdXgad0uKYpvWK&_nc_ht=scontent-dfw5-1.xx&oh=a8f22555996aa5ac897789685778537f&oe=5DEEF196"
+        alt="placehold"
         width="200px"
         height="200px"
+        style="float:left"
       />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-        delectus minima incidunt voluptatum, ea esse perferendis sed nobis!
-        Repellat, iste. Impedit nobis, cupiditate necessitatibus rerum odio
-        doloremque eos dignissimos libero!
-      </p>
+      <p></p>
     </main>
+    <footer>Copyright©</footer>
   </body>
 </html>
