--- a/contact.html
+++ b/contact.html
@@ -7,17 +7,16 @@
     <title>Basic Portfolio</title>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-  <header>
-    <div class="container">
-      <h1>Juan Carlos</h1>
-      <ul>
-        <li><a rel="stylesheet" href="index.html">About</a></li>
-        <li><a rel="stylesheet" href="portfolio.html">Portfolio</a></li>
-        <li><a rel="stylesheet" href="contact.html">Contact</a></li>
-      </ul>
-    </div>
-  </header>
-  <br />
 
-  <body></body>
+  <div class="container">
+    <h1>Juan Carlos</h1>
+    <ul>
+      <li><a rel="stylesheet" href="index.html">About</a></li>
+      <li><a rel="stylesheet" href="portfolio.html">Portfolio</a></li>
+      <li><a rel="stylesheet" href="contact.html">Contact</a></li>
+    </ul>
+  </div>
+  <body>
+    <footer>Copyright©</footer>
+  </body>
 </html>
