--- a/portfolio.html
+++ b/portfolio.html
@@ -7,17 +7,18 @@
     <title>Basic Portfolio</title>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
+  <div class="container">
+    <h1>Juan Carlos</h1>
+    <ul>
+      <li><a rel="stylesheet" href="index.html">About</a></li>
+      <li><a rel="stylesheet" href="portfolio.html">Portfolio</a></li>
+      <li><a rel="stylesheet" href="contact.html">Contact</a></li>
+    </ul>
+  </div>
   <body>
-    <header>
-      <div class="container">
-        <h1>Juan Carlos</h1>
-        <ul>
-          <li><a rel="stylesheet" href="index.html">About</a></li>
-          <li><a rel="stylesheet" href="portfolio.html">Portfolio</a></li>
-          <li><a rel="stylesheet" href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-    </header>
-    <br />
+
+
+
+    <footer>Copyright©</footer>
   </body>
 </html>
