added contet and css code

--- a/index.html
+++ b/index.html
@@ -27,7 +27,20 @@
         height="200px"
         style="float:left"
       />
-      <p></p>
+      <br />
+      <p>
+        My Name is Juan Carlos Pelaez. I'm currently going to school for full
+        stack web devlopment. I am brand new to the web devolopment community.
+        For the past 4 years I've been in the auto body industry specializing in
+        hail damge repair. Before that I was an EMT working part time in
+        Minnesota.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. A quas
+        excepturi voluptas numquam unde, debitis mollitia asperiores! Aliquam
+        dignissimos eaque, accusamus accusantium dicta, adipisci iure veniam
+        voluptate nihil eligendi sunt.
+      </p>
     </main>
     <footer>Copyright©</footer>
   </body>
